--- a/index.Rmd
+++ b/index.Rmd
@@ -1,8 +1,13 @@
 ---
-title: "index"
+title: "Making a website on GitHub"
 author: "Erik Schoen"
 date: "10/17/2018"
-output: html_document
+output: 
+  html_document:
+    toc: yes
+    toc_float: yes
+    number_sections: yes
+    theme: flatly
 ---
 
 ```{r setup, include=FALSE}
